--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+body<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,162 +16,178 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- Top line -->
-    <header class="page-header">
-      <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="contacts-nav list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-    </header>
-    <!-- Main Page -->
-    <main>
-      <!-- Hero Section -->
-      <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
-      </section>
+    <div class="container">
+      <!-- Top line -->
+      <header class="page-header">
+        <nav>
+          <a href="./index.html" class="logo">WebStudio</a>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Studio</a></li>
+            <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="contacts-nav list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contact"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="contact"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </header>
+      <!-- Main Page -->
+      <main>
+        <!-- Hero Section -->
+        <section class="hero">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </section>
 
-      <!-- Features of the company -->
-      <section class="section features">
-        <h2 class="section-title">Our Features</h2>
-        <ul class="feature-list list">
-          <li>
-            <h3 class="title">Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!-- Products -->
-      <section class="section products">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="products-list list">
-          <li>
-            <img src="./images/img-product-1.jpg" alt="Service 1" width="360" />
-          </li>
-          <li>
-            <img src="./images/img-product-2.jpg" alt="Service 2" width="360" />
-          </li>
-          <li>
-            <img src="./images/img-product-3.jpg" alt="Service 3" width="360" />
-          </li>
-        </ul>
-      </section>
-      <!-- The team -->
-      <section class="section team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list list">
-          <li>
-            <img
-              src="./images/img-team-1.jpg"
-              alt="Portrait of Mark Guerrero"
-              width="264"
-            />
-            <h3 class="title">Mark Guerrero</h3>
-            <p>Product Designer</p>
-            <ul class="list">
-              <li><a href="" aria-label="inatagram-link"></a></li>
-              <li><a href="" aria-label="twitter-link"></a></li>
-              <li><a href="" aria-label="facebook-link"></a></li>
-              <li><a href="" aria-label="linkedin-link"></a></li>
-            </ul>
-          </li>
+        <!-- Features of the company -->
+        <section class="section features">
+          <h2 class="section-title">Our Features</h2>
+          <ul class="feature-list list">
+            <li>
+              <h3 class="title">Strategy</h3>
+              <p>
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3>Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3>Diligence</h3>
+              <p>
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3>Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <!-- Products -->
+        <section class="section products">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="products-list list">
+            <li>
+              <img
+                src="./images/img-product-1.jpg"
+                alt="Service 1"
+                width="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img-product-2.jpg"
+                alt="Service 2"
+                width="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img-product-3.jpg"
+                alt="Service 3"
+                width="360"
+              />
+            </li>
+          </ul>
+        </section>
+        <!-- The team -->
+        <section class="section team">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list list">
+            <li>
+              <img
+                src="./images/img-team-1.jpg"
+                alt="Portrait of Mark Guerrero"
+                width="264"
+              />
+              <h3 class="title">Mark Guerrero</h3>
+              <p>Product Designer</p>
+              <ul class="list">
+                <li><a href="" aria-label="inatagram-link"></a></li>
+                <li><a href="" aria-label="twitter-link"></a></li>
+                <li><a href="" aria-label="facebook-link"></a></li>
+                <li><a href="" aria-label="linkedin-link"></a></li>
+              </ul>
+            </li>
 
-          <li>
-            <img
-              src="./images/img-team-2.jpg"
-              alt="Portrait of Tom Ford"
-              width="264"
-            />
-            <h3 class="title">Tom Ford</h3>
-            <p>Frontend Developer</p>
-            <ul class="list">
-              <li><a href="" aria-label="inatagram-link"></a></li>
-              <li><a href="" aria-label="twitter-link"></a></li>
-              <li><a href="" aria-label="facebook-link"></a></li>
-              <li><a href="" aria-label="linkedin-link"></a></li>
-            </ul>
-          </li>
+            <li>
+              <img
+                src="./images/img-team-2.jpg"
+                alt="Portrait of Tom Ford"
+                width="264"
+              />
+              <h3 class="title">Tom Ford</h3>
+              <p>Frontend Developer</p>
+              <ul class="list">
+                <li><a href="" aria-label="inatagram-link"></a></li>
+                <li><a href="" aria-label="twitter-link"></a></li>
+                <li><a href="" aria-label="facebook-link"></a></li>
+                <li><a href="" aria-label="linkedin-link"></a></li>
+              </ul>
+            </li>
 
-          <li>
-            <img
-              src="./images/img-team-3.jpg"
-              alt="Portrait of Camila Garcia"
-              width="264"
-            />
-            <h3 class="title">Camila Garcia</h3>
-            <p>Marketing</p>
-            <ul class="list">
-              <li><a href="" aria-label="inatagram-link"></a></li>
-              <li><a href="" aria-label="twitter-link"></a></li>
-              <li><a href="" aria-label="facebook-link"></a></li>
-              <li><a href="" aria-label="linkedin-link"></a></li>
-            </ul>
-          </li>
+            <li>
+              <img
+                src="./images/img-team-3.jpg"
+                alt="Portrait of Camila Garcia"
+                width="264"
+              />
+              <h3 class="title">Camila Garcia</h3>
+              <p>Marketing</p>
+              <ul class="list">
+                <li><a href="" aria-label="inatagram-link"></a></li>
+                <li><a href="" aria-label="twitter-link"></a></li>
+                <li><a href="" aria-label="facebook-link"></a></li>
+                <li><a href="" aria-label="linkedin-link"></a></li>
+              </ul>
+            </li>
 
-          <li>
-            <img
-              src="./images/img-team-4.jpg"
-              alt="Portrait of Daniel Wilson"
-              width="264"
-            />
-            <h3 class="title">Daniel Wilson</h3>
-            <p>UI Designer</p>
-            <ul class="list">
-              <li><a href="" aria-label="inatagram-link"></a></li>
-              <li><a href="" aria-label="twitter-link"></a></li>
-              <li><a href="" aria-label="facebook-link"></a></li>
-              <li><a href="" aria-label="linkedin-link"></a></li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a href="./index.html" class="logo-footer">WebStudio</a>
-      <p class="declaration">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+            <li>
+              <img
+                src="./images/img-team-4.jpg"
+                alt="Portrait of Daniel Wilson"
+                width="264"
+              />
+              <h3 class="title">Daniel Wilson</h3>
+              <p>UI Designer</p>
+              <ul class="list">
+                <li><a href="" aria-label="inatagram-link"></a></li>
+                <li><a href="" aria-label="twitter-link"></a></li>
+                <li><a href="" aria-label="facebook-link"></a></li>
+                <li><a href="" aria-label="linkedin-link"></a></li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="footer">
+        <a href="./index.html" class="logo-footer">WebStudio</a>
+        <p class="declaration">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
