--- a/portfolio.html
+++ b/portfolio.html
@@ -17,23 +17,29 @@
   </head>
   <body>
     <!-- Top line -->
-    <header class="page-header">
+    <header class="page-header container">
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-dark">Studio</span></a
+        >
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
+          <li class="item">
+            <a href="./index.html" class="link current">Studio</a>
+          </li>
+          <li class="item">
+            <a href="./portfolio.html" class="link">Portfolio</a>
+          </li>
+          <li class="item"><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul class="contacts-nav list">
-          <li>
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="contact"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -147,8 +153,10 @@
         </li>
       </ul>
     </main>
-    <footer class="footer">
-      <a href="./index.html" class="logo-footer">WebStudio</a>
+    <footer class="footer container">
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-light">Studio</span></a
+      >
       <p class="declaration">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
