--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -33,7 +36,7 @@
         </ul>
       </nav>
       <address>
-        <ul class="contacts-nav list">
+        <ul class="contacts-nav">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="contact"
               >info@devstudio.com</a
@@ -56,29 +59,29 @@
       <!-- Features of the company -->
       <section class="section features container">
         <h2 class="section-title visually-hidden">Our Features</h2>
-        <ul class="feature-list list">
-          <li>
+        <ul class="feature-list">
+          <li class="item">
             <h3 class="title">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
@@ -90,84 +93,96 @@
       <!-- Products -->
       <section class="section products container">
         <h2 class="section-title">What are we doing</h2>
-        <ul class="products-list list">
-          <li>
+        <ul class="products-list">
+          <li class="item">
             <img src="./images/img-product-1.jpg" alt="Service 1" width="360" />
           </li>
-          <li>
+          <li class="item">
             <img src="./images/img-product-2.jpg" alt="Service 2" width="360" />
           </li>
-          <li>
+          <li class="item">
             <img src="./images/img-product-3.jpg" alt="Service 3" width="360" />
           </li>
         </ul>
       </section>
       <!-- The team -->
-      <section class="section container">
+      <section class="section container team">
         <h2 class="section-title">Our Team</h2>
-        <ul class="team-list list">
-          <li>
-            <img
-              src="./images/img-team-1.jpg"
-              alt="Portrait of Mark Guerrero"
-              width="264"
-            />
-            <h3 class="title">Mark Guerrero</h3>
-            <p>Product Designer</p>
-            <ul class="list">
-              <li><a href="" aria-label="inatagram-link"></a></li>
-              <li><a href="" aria-label="twitter-link"></a></li>
-              <li><a href="" aria-label="facebook-link"></a></li>
-              <li><a href="" aria-label="linkedin-link"></a></li>
-            </ul>
+        <ul class="team-list">
+          <li class="item">
+            <div class="team-name">
+              <img
+                class="team-portrait"
+                src="./images/img-team-1.jpg"
+                alt="Portrait of Mark Guerrero"
+                width="264"
+              />
+              <h3 class="title">Mark Guerrero</h3>
+              <p class="function">Product Designer</p>
+              <ul class="list">
+                <li><a href="" aria-label="inatagram-link"></a></li>
+                <li><a href="" aria-label="twitter-link"></a></li>
+                <li><a href="" aria-label="facebook-link"></a></li>
+                <li><a href="" aria-label="linkedin-link"></a></li>
+              </ul>
+            </div>
           </li>
 
-          <li>
-            <img
-              src="./images/img-team-2.jpg"
-              alt="Portrait of Tom Ford"
-              width="264"
-            />
-            <h3 class="title">Tom Ford</h3>
-            <p>Frontend Developer</p>
-            <ul class="list">
-              <li><a href="" aria-label="inatagram-link"></a></li>
-              <li><a href="" aria-label="twitter-link"></a></li>
-              <li><a href="" aria-label="facebook-link"></a></li>
-              <li><a href="" aria-label="linkedin-link"></a></li>
-            </ul>
+          <li class="item">
+            <div class="team-name">
+              <img
+                class="team-portrait"
+                src="./images/img-team-2.jpg"
+                alt="Portrait of Tom Ford"
+                width="264"
+              />
+              <h3 class="title">Tom Ford</h3>
+              <p class="function">Frontend Developer</p>
+              <ul class="list">
+                <li><a href="" aria-label="inatagram-link"></a></li>
+                <li><a href="" aria-label="twitter-link"></a></li>
+                <li><a href="" aria-label="facebook-link"></a></li>
+                <li><a href="" aria-label="linkedin-link"></a></li>
+              </ul>
+            </div>
           </li>
 
-          <li>
-            <img
-              src="./images/img-team-3.jpg"
-              alt="Portrait of Camila Garcia"
-              width="264"
-            />
-            <h3 class="title">Camila Garcia</h3>
-            <p>Marketing</p>
-            <ul class="list">
-              <li><a href="" aria-label="inatagram-link"></a></li>
-              <li><a href="" aria-label="twitter-link"></a></li>
-              <li><a href="" aria-label="facebook-link"></a></li>
-              <li><a href="" aria-label="linkedin-link"></a></li>
-            </ul>
+          <li class="item">
+            <div class="team-name">
+              <img
+                class="team-portrait"
+                src="./images/img-team-3.jpg"
+                alt="Portrait of Camila Garcia"
+                width="264"
+              />
+              <h3 class="title">Camila Garcia</h3>
+              <p class="function">Marketing</p>
+              <ul class="list">
+                <li><a href="" aria-label="inatagram-link"></a></li>
+                <li><a href="" aria-label="twitter-link"></a></li>
+                <li><a href="" aria-label="facebook-link"></a></li>
+                <li><a href="" aria-label="linkedin-link"></a></li>
+              </ul>
+            </div>
           </li>
 
-          <li>
-            <img
-              src="./images/img-team-4.jpg"
-              alt="Portrait of Daniel Wilson"
-              width="264"
-            />
-            <h3 class="title">Daniel Wilson</h3>
-            <p>UI Designer</p>
-            <ul class="list">
-              <li><a href="" aria-label="inatagram-link"></a></li>
-              <li><a href="" aria-label="twitter-link"></a></li>
-              <li><a href="" aria-label="facebook-link"></a></li>
-              <li><a href="" aria-label="linkedin-link"></a></li>
-            </ul>
+          <li class="item">
+            <div class="team-name">
+              <img
+                class="team-portrait"
+                src="./images/img-team-4.jpg"
+                alt="Portrait of Daniel Wilson"
+                width="264"
+              />
+              <h3 class="title">Daniel Wilson</h3>
+              <p class="function">UI Designer</p>
+              <ul class="list">
+                <li><a href="" aria-label="inatagram-link"></a></li>
+                <li><a href="" aria-label="twitter-link"></a></li>
+                <li><a href="" aria-label="facebook-link"></a></li>
+                <li><a href="" aria-label="linkedin-link"></a></li>
+              </ul>
+            </div>
           </li>
         </ul>
       </section>
