Added Style Portfolio

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         >
         <ul class="site-nav list">
           <li class="item">
-            <a href="./index.html" class="link current">Studio</a>
+            <a href="./index.html" class="site-nav-link current">Studio</a>
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="link">Portfolio</a>
+            <a href="./portfolio.html" class="site-nav-link">Portfolio</a>
           </li>
-          <li class="item"><a href="" class="link">Contacts</a></li>
+          <li class="item"><a href="" class="site-nav-link">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -60,29 +60,29 @@
       <section class="section features container">
         <h2 class="section-title visually-hidden">Our Features</h2>
         <ul class="feature-list">
-          <li class="item">
-            <h3 class="title">Strategy</h3>
+          <li class="feature-list-item">
+            <h3 class="features-title">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="item">
-            <h3>Punctuality</h3>
+          <li class="feature-list-item">
+            <h3 class="features-title">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="item">
+          <li class="feature-list-item">
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="item">
-            <h3>Technologies</h3>
+          <li class="feature-list-item">
+            <h3 class="features-title">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -117,7 +117,7 @@
                 alt="Portrait of Mark Guerrero"
                 width="264"
               />
-              <h3 class="title">Mark Guerrero</h3>
+              <h3 class="team-title">Mark Guerrero</h3>
               <p class="function">Product Designer</p>
               <ul class="list">
                 <li><a href="" aria-label="inatagram-link"></a></li>
@@ -136,7 +136,7 @@
                 alt="Portrait of Tom Ford"
                 width="264"
               />
-              <h3 class="title">Tom Ford</h3>
+              <h3 class="team-title">Tom Ford</h3>
               <p class="function">Frontend Developer</p>
               <ul class="list">
                 <li><a href="" aria-label="inatagram-link"></a></li>
@@ -155,7 +155,7 @@
                 alt="Portrait of Camila Garcia"
                 width="264"
               />
-              <h3 class="title">Camila Garcia</h3>
+              <h3 class="team-title">Camila Garcia</h3>
               <p class="function">Marketing</p>
               <ul class="list">
                 <li><a href="" aria-label="inatagram-link"></a></li>
@@ -174,7 +174,7 @@
                 alt="Portrait of Daniel Wilson"
                 width="264"
               />
-              <h3 class="title">Daniel Wilson</h3>
+              <h3 class="team-title">Daniel Wilson</h3>
               <p class="function">UI Designer</p>
               <ul class="list">
                 <li><a href="" aria-label="inatagram-link"></a></li>
