--- a/portfolio.html
+++ b/portfolio.html
@@ -24,16 +24,16 @@
         >
         <ul class="site-nav list">
           <li class="item">
-            <a href="./index.html" class="link current">Studio</a>
+            <a href="./index.html" class="site-nav-link current">Studio</a>
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="link">Portfolio</a>
+            <a href="./portfolio.html" class="site-nav-link">Portfolio</a>
           </li>
-          <li class="item"><a href="" class="link">Contacts</a></li>
+          <li class="item"><a href="" class="site-nav-link">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="contacts-nav list">
+        <ul class="contacts-nav">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="contact"
               >info@devstudio.com</a
@@ -45,113 +45,145 @@
         </ul>
       </address>
     </header>
+
     <!-- Main Page -->
     <main>
-      <h1>Portfolio</h1>
-      <!-- Filters -->
-      <ul class="filters-list list">
-        <li><button type="button" class="filter-btn">All</button></li>
-        <li><button type="button" class="filter-btn">Web Site</button></li>
-        <li><button type="button" class="filter-btn">App</button></li>
-        <li><button type="button" class="filter-btn">Disign</button></li>
-        <li><button type="button" class="filter-btn">Marketing</button></li>
-      </ul>
-      <!-- Project Cards -->
-      <ul class="project-cards-list list">
-        <li>
-          <img
-            class="project-card-img"
-            src="./images/img-banking-app.jpg"
-            alt="Banking App Picture"
-            width="360"
-          />
-          <h2 class="title">Banking App Interface Concept</h2>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            class="project-card-img"
-            src="./images/img-cashless-payment.jpg"
-            alt="Cashless Payment
+      <div class="container">
+        <h1 class="visually-hidden">Portfolio</h1>
+        <!-- Filters -->
+        <ul class="filters-list">
+          <li class="filter-list-item">
+            <button type="button" class="filter-btn">All</button>
+          </li>
+          <li class="filter-list-item">
+            <button type="button" class="filter-btn">Web Site</button>
+          </li>
+          <li class="filter-list-item">
+            <button type="button" class="filter-btn">App</button>
+          </li>
+          <li class="filter-list-item">
+            <button type="button" class="filter-btn">Disign</button>
+          </li>
+          <li class="filter-list-item">
+            <button type="button" class="filter-btn">Marketing</button>
+          </li>
+        </ul>
+        <!-- Project Cards -->
+        <ul class="project-cards-list">
+          <li class="project-card-item">
+            <img
+              class="project-card-img"
+              src="./images/img-banking-app.jpg"
+              alt="Banking App Picture"
+              width="360"
+            />
+            <div class="project-card-border">
+              <h2 class="project-card-title">Banking App Interface Concept</h2>
+              <p>App</p>
+            </div>
+          </li>
+          <li class="project-card-item">
+            <img
+              class="project-card-img"
+              src="./images/img-cashless-payment.jpg"
+              alt="Cashless Payment
             Picture"
-            width="360"
-          />
-          <h2 class="title">Cashless Payment</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            class="project-card-img"
-            src="./images/img-meditation-app.jpg"
-            alt="Meditation App Picture"
-            width="360"
-          />
-          <h2 class="title">Meditaion App</h2>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            class="project-card-img"
-            src="./images/img-taxi-service.jpg"
-            alt="Taxi Service Picture"
-            width="360"
-          />
-          <h2 class="title">Taxi Service</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            class="project-card-img"
-            src="./images/img-screen-illustrations.jpg"
-            alt="Screen
+              width="360"
+            />
+            <div class="project-card-border">
+              <h2 class="project-card-title">Cashless Payment</h2>
+              <p>Marketing</p>
+            </div>
+          </li>
+          <li class="project-card-item">
+            <img
+              class="project-card-img"
+              src="./images/img-meditation-app.jpg"
+              alt="Meditation App Picture"
+              width="360"
+            />
+            <div class="project-card-border">
+              <h2 class="project-card-title">Meditaion App</h2>
+              <p>App</p>
+            </div>
+          </li>
+          <li class="project-card-item">
+            <img
+              class="project-card-img"
+              src="./images/img-taxi-service.jpg"
+              alt="Taxi Service Picture"
+              width="360"
+            />
+            <div class="project-card-border">
+              <h2 class="project-card-title">Taxi Service</h2>
+              <p>Marketing</p>
+            </div>
+          </li>
+          <li class="project-card-item">
+            <img
+              class="project-card-img"
+              src="./images/img-screen-illustrations.jpg"
+              alt="Screen
             Illustrations Picture"
-            width="360"
-          />
-          <h2 class="title">Screen Illustrations</h2>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            class="project-card-img"
-            src="./images/img-online-courses.jpg"
-            alt="Online Courses Picture"
-            width="360"
-          />
-          <h2 class="title">Online Courses</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            class="project-card-img"
-            src="./images/img-instagram-stories.jpg"
-            alt="Instagram Stories
+              width="360"
+            />
+            <div class="project-card-border">
+              <h2 class="project-card-title">Screen Illustrations</h2>
+              <p>Design</p>
+            </div>
+          </li>
+          <li class="project-card-item">
+            <img
+              class="project-card-img"
+              src="./images/img-online-courses.jpg"
+              alt="Online Courses Picture"
+              width="360"
+            />
+            <div class="project-card-border">
+              <h2 class="project-card-title">Online Courses</h2>
+              <p>Marketing</p>
+            </div>
+          </li>
+
+          <li class="project-card-item">
+            <img
+              class="project-card-img"
+              src="./images/img-instagram-stories.jpg"
+              alt="Instagram Stories
             Picture"
-            width="360"
-          />
-          <h2 class="title">Instagram Stories Concept</h2>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            class="project-card-img"
-            src="./images/img-organic-food.jpg"
-            alt="Organic Food Picture"
-            width="360"
-          />
-          <h2 class="title">Organic Food</h2>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img
-            class="project-card-img"
-            src="./images/img-fresh-coffee.jpg"
-            alt="Fresh Coffee Picture"
-            width="360"
-          />
-          <h2 class="title">Fresh Coffee</h2>
-          <p>Web Site</p>
-        </li>
-      </ul>
+              width="360"
+            />
+            <div class="project-card-border">
+              <h2 class="project-card-title">Instagram Stories Concept</h2>
+              <p>Design</p>
+            </div>
+          </li>
+          <li class="project-card-item">
+            <img
+              class="project-card-img"
+              src="./images/img-organic-food.jpg"
+              alt="Organic Food Picture"
+              width="360"
+            />
+            <div class="project-card-border">
+              <h2 class="project-card-title">Organic Food</h2>
+              <p>Web Site</p>
+            </div>
+          </li>
+          <li class="project-card-item">
+            <img
+              class="project-card-img"
+              src="./images/img-fresh-coffee.jpg"
+              alt="Fresh Coffee Picture"
+              width="360"
+            />
+            <div class="project-card-border">
+              <h2 class="project-card-title">Fresh Coffee</h2>
+              <p>Web Site</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </main>
     <footer class="footer container">
       <a href="./index.html" class="logo"
