--- a/portfolio.html
+++ b/portfolio.html
@@ -17,33 +17,37 @@
   </head>
   <body>
     <!-- Top line -->
-    <header class="page-header container">
-      <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-dark">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li class="item">
-            <a href="./index.html" class="site-nav-link current">Studio</a>
-          </li>
-          <li class="item">
-            <a href="./portfolio.html" class="site-nav-link">Portfolio</a>
-          </li>
-          <li class="item"><a href="" class="site-nav-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="contacts-nav">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="contact"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="item">
-            <a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header>
+      <div class="container page-header">
+        <nav>
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-dark">Studio</span></a
+          >
+          <ul class="site-nav">
+            <li class="item">
+              <a href="./index.html" class="site-nav-link current">Studio</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="site-nav-link">Portfolio</a>
+            </li>
+            <li class="item"><a href="" class="site-nav-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="contacts-nav">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="contact"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+110001111111" class="contact"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Main Page -->
@@ -53,7 +57,7 @@
         <!-- Filters -->
         <ul class="filters-list">
           <li class="filter-list-item">
-            <button type="button" class="filter-btn">All</button>
+            <button type="button" class="filter-btn active-btn">All</button>
           </li>
           <li class="filter-list-item">
             <button type="button" class="filter-btn">Web Site</button>
@@ -79,7 +83,7 @@
             />
             <div class="project-card-border">
               <h2 class="project-card-title">Banking App Interface Concept</h2>
-              <p>App</p>
+              <p class="project-card-category">App</p>
             </div>
           </li>
           <li class="project-card-item">
@@ -92,7 +96,7 @@
             />
             <div class="project-card-border">
               <h2 class="project-card-title">Cashless Payment</h2>
-              <p>Marketing</p>
+              <p class="project-card-category">Marketing</p>
             </div>
           </li>
           <li class="project-card-item">
@@ -104,7 +108,7 @@
             />
             <div class="project-card-border">
               <h2 class="project-card-title">Meditaion App</h2>
-              <p>App</p>
+              <p class="project-card-category">App</p>
             </div>
           </li>
           <li class="project-card-item">
@@ -116,7 +120,7 @@
             />
             <div class="project-card-border">
               <h2 class="project-card-title">Taxi Service</h2>
-              <p>Marketing</p>
+              <p class="project-card-category">Marketing</p>
             </div>
           </li>
           <li class="project-card-item">
@@ -129,7 +133,7 @@
             />
             <div class="project-card-border">
               <h2 class="project-card-title">Screen Illustrations</h2>
-              <p>Design</p>
+              <p class="project-card-category">Design</p>
             </div>
           </li>
           <li class="project-card-item">
@@ -141,7 +145,7 @@
             />
             <div class="project-card-border">
               <h2 class="project-card-title">Online Courses</h2>
-              <p>Marketing</p>
+              <p class="project-card-category">Marketing</p>
             </div>
           </li>
 
@@ -155,7 +159,7 @@
             />
             <div class="project-card-border">
               <h2 class="project-card-title">Instagram Stories Concept</h2>
-              <p>Design</p>
+              <p class="project-card-category">Design</p>
             </div>
           </li>
           <li class="project-card-item">
@@ -167,7 +171,7 @@
             />
             <div class="project-card-border">
               <h2 class="project-card-title">Organic Food</h2>
-              <p>Web Site</p>
+              <p class="project-card-category">Web Site</p>
             </div>
           </li>
           <li class="project-card-item">
@@ -179,20 +183,22 @@
             />
             <div class="project-card-border">
               <h2 class="project-card-title">Fresh Coffee</h2>
-              <p>Web Site</p>
+              <p class="project-card-category">Web Site</p>
             </div>
           </li>
         </ul>
       </div>
     </main>
-    <footer class="footer container">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-light">Studio</span></a
-      >
-      <p class="declaration">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-light">Studio</span></a
+        >
+        <p class="declaration">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
