--- a/index.html
+++ b/index.html
@@ -20,181 +20,207 @@
   </head>
   <body>
     <!-- Top line -->
-    <header class="page-header container">
-      <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-dark">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li class="item">
-            <a href="./index.html" class="site-nav-link current">Studio</a>
-          </li>
-          <li class="item">
-            <a href="./portfolio.html" class="site-nav-link">Portfolio</a>
-          </li>
-          <li class="item"><a href="" class="site-nav-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="contacts-nav">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="contact"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="item">
-            <a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header>
+      <div class="container page-header">
+        <nav>
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-dark">Studio</span></a
+          >
+          <ul class="site-nav">
+            <li class="item">
+              <a href="./index.html" class="site-nav-link current">Studio</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="site-nav-link">Portfolio</a>
+            </li>
+            <li class="item"><a href="" class="site-nav-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="contacts-nav">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="contact"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+110001111111" class="contact"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Main Page -->
     <main>
       <!-- Hero Section -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
 
       <!-- Features of the company -->
-      <section class="section features container">
-        <h2 class="section-title visually-hidden">Our Features</h2>
-        <ul class="feature-list">
-          <li class="feature-list-item">
-            <h3 class="features-title">Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="features-title">Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="features-title">Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section features-title">
+        <div class="container">
+          <h2 class="section-title visually-hidden">Our Features</h2>
+          <ul class="feature-list">
+            <li class="feature-list-item">
+              <h3 class="features-title">Strategy</h3>
+              <p>
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3 class="features-title">Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3>Diligence</h3>
+              <p>
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3 class="features-title">Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Products -->
-      <section class="section products container">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="products-list">
-          <li class="item">
-            <img src="./images/img-product-1.jpg" alt="Service 1" width="360" />
-          </li>
-          <li class="item">
-            <img src="./images/img-product-2.jpg" alt="Service 2" width="360" />
-          </li>
-          <li class="item">
-            <img src="./images/img-product-3.jpg" alt="Service 3" width="360" />
-          </li>
-        </ul>
+      <section class="section products-list">
+        <div class="container">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="products-list">
+            <li class="item">
+              <img
+                src="./images/img-product-1.jpg"
+                alt="Service 1"
+                width="360"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/img-product-2.jpg"
+                alt="Service 2"
+                width="360"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/img-product-3.jpg"
+                alt="Service 3"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- The team -->
-      <section class="section container team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="item">
-            <div class="team-name">
-              <img
-                class="team-portrait"
-                src="./images/img-team-1.jpg"
-                alt="Portrait of Mark Guerrero"
-                width="264"
-              />
-              <h3 class="team-title">Mark Guerrero</h3>
-              <p class="function">Product Designer</p>
-              <ul class="list">
-                <li><a href="" aria-label="inatagram-link"></a></li>
-                <li><a href="" aria-label="twitter-link"></a></li>
-                <li><a href="" aria-label="facebook-link"></a></li>
-                <li><a href="" aria-label="linkedin-link"></a></li>
-              </ul>
-            </div>
-          </li>
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="item">
+              <div class="team-name">
+                <img
+                  class="team-portrait"
+                  src="./images/img-team-1.jpg"
+                  alt="Portrait of Mark Guerrero"
+                  width="264"
+                />
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="function">Product Designer</p>
+                <ul class="list">
+                  <li><a href="" aria-label="inatagram-link"></a></li>
+                  <li><a href="" aria-label="twitter-link"></a></li>
+                  <li><a href="" aria-label="facebook-link"></a></li>
+                  <li><a href="" aria-label="linkedin-link"></a></li>
+                </ul>
+              </div>
+            </li>
 
-          <li class="item">
-            <div class="team-name">
-              <img
-                class="team-portrait"
-                src="./images/img-team-2.jpg"
-                alt="Portrait of Tom Ford"
-                width="264"
-              />
-              <h3 class="team-title">Tom Ford</h3>
-              <p class="function">Frontend Developer</p>
-              <ul class="list">
-                <li><a href="" aria-label="inatagram-link"></a></li>
-                <li><a href="" aria-label="twitter-link"></a></li>
-                <li><a href="" aria-label="facebook-link"></a></li>
-                <li><a href="" aria-label="linkedin-link"></a></li>
-              </ul>
-            </div>
-          </li>
+            <li class="item">
+              <div class="team-name">
+                <img
+                  class="team-portrait"
+                  src="./images/img-team-2.jpg"
+                  alt="Portrait of Tom Ford"
+                  width="264"
+                />
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="function">Frontend Developer</p>
+                <ul class="list">
+                  <li><a href="" aria-label="inatagram-link"></a></li>
+                  <li><a href="" aria-label="twitter-link"></a></li>
+                  <li><a href="" aria-label="facebook-link"></a></li>
+                  <li><a href="" aria-label="linkedin-link"></a></li>
+                </ul>
+              </div>
+            </li>
 
-          <li class="item">
-            <div class="team-name">
-              <img
-                class="team-portrait"
-                src="./images/img-team-3.jpg"
-                alt="Portrait of Camila Garcia"
-                width="264"
-              />
-              <h3 class="team-title">Camila Garcia</h3>
-              <p class="function">Marketing</p>
-              <ul class="list">
-                <li><a href="" aria-label="inatagram-link"></a></li>
-                <li><a href="" aria-label="twitter-link"></a></li>
-                <li><a href="" aria-label="facebook-link"></a></li>
-                <li><a href="" aria-label="linkedin-link"></a></li>
-              </ul>
-            </div>
-          </li>
+            <li class="item">
+              <div class="team-name">
+                <img
+                  class="team-portrait"
+                  src="./images/img-team-3.jpg"
+                  alt="Portrait of Camila Garcia"
+                  width="264"
+                />
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="function">Marketing</p>
+                <ul class="list">
+                  <li><a href="" aria-label="inatagram-link"></a></li>
+                  <li><a href="" aria-label="twitter-link"></a></li>
+                  <li><a href="" aria-label="facebook-link"></a></li>
+                  <li><a href="" aria-label="linkedin-link"></a></li>
+                </ul>
+              </div>
+            </li>
 
-          <li class="item">
-            <div class="team-name">
-              <img
-                class="team-portrait"
-                src="./images/img-team-4.jpg"
-                alt="Portrait of Daniel Wilson"
-                width="264"
-              />
-              <h3 class="team-title">Daniel Wilson</h3>
-              <p class="function">UI Designer</p>
-              <ul class="list">
-                <li><a href="" aria-label="inatagram-link"></a></li>
-                <li><a href="" aria-label="twitter-link"></a></li>
-                <li><a href="" aria-label="facebook-link"></a></li>
-                <li><a href="" aria-label="linkedin-link"></a></li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+            <li class="item">
+              <div class="team-name">
+                <img
+                  class="team-portrait"
+                  src="./images/img-team-4.jpg"
+                  alt="Portrait of Daniel Wilson"
+                  width="264"
+                />
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="function">UI Designer</p>
+                <ul class="list">
+                  <li><a href="" aria-label="inatagram-link"></a></li>
+                  <li><a href="" aria-label="twitter-link"></a></li>
+                  <li><a href="" aria-label="facebook-link"></a></li>
+                  <li><a href="" aria-label="linkedin-link"></a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer class="footer container">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-light">Studio</span></a
-      >
-      <p class="declaration">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-light">Studio</span></a
+        >
+        <p class="declaration">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
