--- a/index.html
+++ b/index.html
@@ -69,28 +69,28 @@
           <ul class="feature-list">
             <li class="feature-list-item">
               <h3 class="features-title">Strategy</h3>
-              <p>
+              <p class="feature-list-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="feature-list-item">
               <h3 class="features-title">Punctuality</h3>
-              <p>
+              <p class="feature-list-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="feature-list-item">
-              <h3>Diligence</h3>
-              <p>
+              <h3 class="features-title">Diligence</h3>
+              <p class="feature-list-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="feature-list-item">
               <h3 class="features-title">Technologies</h3>
-              <p>
+              <p class="feature-list-description">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
